# decompose

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TASKS.md  decompose.yaml  ea4g6getguuifqkc5cookenjmpkqdrls  flake.nix  manifest  t3ibulhdtfpn6ppvblqvdhqbootq93ue
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.claude/agents/: qa.md
.claude/skills/: decompose.md
.claude/skills/decompose/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/demo/: compose.yml  tui.tape
docs/src/: README.md  SUMMARY.md  commands.md  completion.md  configuration.md  getting-started.md  migration.md
examples/: dependencies.yaml  environment.yaml  replicas.yaml  simple.yaml
src/: cli.rs  completion.rs  config.rs  daemon.rs  health_probes.rs  ipc.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  tui.rs  tuning.rs
tests/: cli_integration.rs
