[package]
name = "decompose"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Samuel Cormier-Iijima <samuel@cormier-iijima.com>"]
description = "A simple and flexible scheduler and orchestrator to manage non-containerized applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sciyoshi/decompose"
homepage = "https://github.com/sciyoshi/decompose"
documentation = "https://docs.rs/decompose"
readme = "README.md"
keywords = ["process", "orchestration", "compose", "daemon", "devtools"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "/.github",
    "/.claude",
    "/.cursor",
    "/.decompose",
    "/examples",
    "CLAUDE.md",
    "TASKS.md",
]

[dependencies]
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
humantime = "2"
interprocess = { version = "2", features = ["tokio"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
nix = { version = "0.29", features = ["signal"] }
regex = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
which = "7"
ratatui = { version = "0.29.0", features = ["crossterm", "underline-color"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
